--- a/styles.css
+++ b/styles.css
@@ -1,34 +1,19 @@
-body {
+.body {
     background-color: rgb(109, 101, 101);
    
 }
 
 nav {
-  color:rgb(187, 184, 184);
+  color:rgb(59, 54, 54);
 }
 
 
 
-.carousel-item {
-height: 700px; /* Adjust height as needed */
-width: 100%; /* Set width to 100% to center items */
-display: flex;
-justify-content: center;
-align-items: center;
-background-color: #333; /* Dark gray background color */
-background-size: cover; /* Scale the background image to fit */
-background-repeat: no-repeat; /* Prevent image from repeating */
-background-position: center; /* Center the background image */
-}
 
-.carousel-caption {
-background: rgba(0, 0, 0, 0.5); /* Semi-transparent background for caption */
-color: white;
 
-}
-
-.half-size-image {
+.comic-image {
 max-width: 100%; /* Ensure image does not exceed container width */
 height: auto; /* Maintain aspect ratio */
 max-height: 350px; /* Set maximum height */
+
 }
